[project]
name = "building-ai-chatbot-with-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.16",
    "langchain-tavily>=0.1.6",
    "langgraph>=0.4.3",
    "python-dotenv>=1.1.0",
]
