[project]
name = "google-gemini-api-usages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.24.0",
    "ipykernel>=6.29.5",
    "langchain-google-genai>=2.1.6",
    "pillow>=11.3.0",
]
